# home-assistant-appdaemon

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  appdaemon.yaml  justfile  pyproject.toml  sonar-project.properties  tmp.py
.github/: labeler.yml
.github/workflows/: auto_create_pr.yml  ci.yml  ci_deployment.yml  ci_validation.yml  prek-autoupdate.yml  prek-hooks.yml  semantic_release.yml  set_pr_auto_merge.yml
apps/: apps.yaml
apps/ci/: appdaemon_updater.py
apps/commit_files_to_vcs/: lovelace_file_committer.py  version_file_committer.py
apps/commit_version_file/: version_file_committer.py
apps/cosmo/: cosmo_image_downloader.py  cosmo_monitor.py
apps/cosmo_monitor/: cosmo_monitor.py
apps/google_fit/: fitness_variables.py
apps/log_file/: log_processor.py
apps/monzo/: auto_saver.py  credit_card_pot_manager.py
apps/pro_breeze_ac/: pro_breeze_ac.py
apps/spotify/: track_processor.py
apps/truelayer/: bank_balance.py
