[tool.poetry]
name = "ha-appdaemon"
version = "0.18.0"
description = ""
authors = ["Will Garside <worgarside@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
wg-utilities = {version = "5.17.1", extras = ["clients"]}
pygithub = "^2.4.0"
gitpython = "^3.1.43"
pillow = "^10.4.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
appdaemon = { git = "https://github.com/AppDaemon/appdaemon.git" }

[tool.mypy]
plugins = ["pydantic.mypy"]

check_untyped_defs = true

disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true

explicit_package_bases = true

ignore_missing_imports = false

no_implicit_optional = true
no_implicit_reexport = true

show_column_numbers = true
show_error_codes = true
show_error_context = true

strict = true
strict_equality = true
strict_optional = true

warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true

enable_error_code = [
  "arg-type",           # Checks for argument types in function calls.
  "assignment",         # Validates types of variable assignments.
  "return-value",       # Ensures that return values match the declared type.
  "call-overload",      # Validates correct use of method/function overloads.
  "operator",           # Checks operator usage against expected types.
  "index",              # Validates types used in indexing operations.
  "attr-defined",       # Checks if attributes exist in classes/objects.
  "no-untyped-call",    # Prevents calls to untyped functions in typed contexts.
  "unreachable",        # Warns about code that can never be executed.
  "truthy-bool",        # Ensures that boolean expressions are boolean in type.
  "union-attr",         # Checks for attribute access in unions safely.
  "dict-item",          # Checks for proper types used in dictionary items.
  "unused-awaitable",   # Warns if an awaitable is not awaited.
  "override",           # Ensures overridden methods match the signature in base class.
  "list-item",          # Checks type consistency of list items.
  "return",             # Ensures all code paths in a function return a value if needed.
  "type-var",           # Ensures type variables are used correctly.
  "valid-type",         # Validates types used in annotations are recognized.
  "func-returns-value", # Ensures functions declared with a return type actually return a value.
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.codespell]
skip = '*.json,*.csv,*.xml,*.lock'
ignore-words-list = "hass,ags"

[tool.ruff]
fix = true
line-length = 90
lint.select = ["ALL"]
lint.ignore = [
  "ANN101", # https://docs.astral.sh/ruff/rules/missing-type-function-argument/
  "D107",   # https://docs.astral.sh/ruff/rules/undocumented-public-init/
  "S314",   # https://docs.astral.sh/ruff/rules/suspicious-xml-element-tree-usage/
  "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
  "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
  "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/
  "EM",     # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "BLE",    # https://docs.astral.sh/ruff/rules/blind-except/
  "DOC201", # https://docs.astral.sh/ruff/rules/docstring-missing-returns/
  "DOC402", # https://docs.astral.sh/ruff/rules/docstring-missing-yields/
  "DOC501", # https://docs.astral.sh/ruff/rules/docstring-missing-exception/
]

[tool.ruff.lint.pycodestyle]
max-line-length = 115

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
