[project]
name = "ha-appdaemon"
version = "0.21.1"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Will Garside" }]
dependencies = [
  "wg-utilities[clients]>=5.17.4,<6",
  "pygithub>=2.9.1,<3",
  "gitpython>=3.1.50,<4",
  "pillow>=11.3.0,<12",
  "tinytuya>=1.18.1",
  "paho-mqtt>=2.1.0",
]

[dependency-groups]
dev = [
  "appdaemon==4.5.13",
  "basedpyright>=1.39.7",
]

[tool.uv]
package = false

[tool.basedpyright]
include = ["apps"]
pythonVersion = "3.12"
typeCheckingMode = "strict"

executionEnvironments = [
  { root = "apps" },
]

reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

[tool.codespell]
skip = '*.json,*.csv,*.xml,*.lock'
ignore-words-list = "hass,ags"

[tool.semantic_release]
tag_format = "{version}"
version_toml = ["pyproject.toml:project.version"]
major_on_zero = false
allow_zero_version = true
build_command = """
    python -m pip install uv
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
  """

[tool.semantic_release.commit_parser_options]
allowed_tags = [
  "build",
  "chore",
  "ci",
  "deps",
  "docs",
  "hotfix",
  "feat",
  "fix",
  "perf",
  "style",
  "refactor",
  "test",
]
minor_tags = ["feat"]
patch_tags = ["deps", "fix", "hotfix", "perf", "build"]
parse_squash_commits = false

[tool.ruff]
fix = true
line-length = 90

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D107",   # https://docs.astral.sh/ruff/rules/undocumented-public-init/
  "S314",   # https://docs.astral.sh/ruff/rules/suspicious-xml-element-tree-usage/
  "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
  "ISC001", # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
  "INP001", # https://docs.astral.sh/ruff/rules/implicit-namespace-package/
  "EM",     # https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
  "ANN",    # https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "BLE",    # https://docs.astral.sh/ruff/rules/blind-except/
  "DOC201", # https://docs.astral.sh/ruff/rules/docstring-missing-returns/
  "DOC402", # https://docs.astral.sh/ruff/rules/docstring-missing-yields/
  "DOC501", # https://docs.astral.sh/ruff/rules/docstring-missing-exception/
]

[tool.ruff.lint.pycodestyle]
max-line-length = 115

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
